@@ -1,4 +1,4 @@
-name    = Thread-Csp
+name    = Thread-CSP
 author  = Leon Timmermans <leont@cpan.org>
 license = Perl_5
 copyright_holder = Leon Timmermans
