@@ -8,7 +8,7 @@
 
 #define slurp_arguments(offset) av_make(items - offset, PL_stack_base + ax + offset)
 
-MODULE = Thread::Csp              PACKAGE = Thread::Csp  PREFIX = thread_
+MODULE = Thread::CSP              PACKAGE = Thread::CSP  PREFIX = thread_
 
 BOOT:
 	global_init(aTHX);
@@ -17,7 +17,7 @@ Promise* thread_spawn(SV* class, SV* module, SV* function, ...)
 	C_ARGS:
 		slurp_arguments(1)
 
-MODULE = Thread::Csp              PACKAGE = Thread::Csp::Promise  PREFIX = promise_
+MODULE = Thread::CSP              PACKAGE = Thread::CSP::Promise  PREFIX = promise_
 
 SV* promise_get(Promise* promise)
 
@@ -25,7 +25,7 @@ bool promise_is_finished(Promise* promise)
 
 SV* promise_finished_fh(Promise* promise)
 
-MODULE = Thread::Csp              PACKAGE = Thread::Csp::Channel  PREFIX = channel_
+MODULE = Thread::CSP              PACKAGE = Thread::CSP::Channel  PREFIX = channel_
 
 SV* channel_new(SV* class)
 
