@@ -4,13 +4,13 @@ use strict;
 use warnings;
 
 use Test::More;
-use Thread::Csp;
+use Thread::CSP;
 
 use lib 't/lib';
 
 subtest 'First', sub {
-	my $q = Thread::Csp::Channel->new;
-	my $r = Thread::Csp->spawn('Basic', 'Basic::basic', $q, 7);
+	my $q = Thread::CSP::Channel->new;
+	my $r = Thread::CSP->spawn('Basic', 'Basic::basic', $q, 7);
 
 	ok(!$r->is_finished, 'is not finished');
 	$q->send(6);
@@ -22,20 +22,20 @@ subtest 'First', sub {
 };
 
 subtest 'Second', sub {
-	my $r = Thread::Csp->spawn('Basic', 'Basic::non_existent');
+	my $r = Thread::CSP->spawn('Basic', 'Basic::non_existent');
 	my $val = eval { $r->get };
 	like($@, qr/Undefined subroutine &Basic::non_existent called./);
 };
 
 subtest 'Third', sub {
-	my $r = Thread::Csp->spawn('NonExistent', 'Basic::one');
+	my $r = Thread::CSP->spawn('NonExistent', 'Basic::one');
 	my $val = eval { $r->get };
 	like($@, qr/Can't locate NonExistent.pm in \@INC/);
 };
 
 subtest 'Fourth', sub {
-	my $q = Thread::Csp::Channel->new;
-	my $r = Thread::Csp->spawn('Basic', 'Basic::basic', $q, 7);
+	my $q = Thread::CSP::Channel->new;
+	my $r = Thread::CSP->spawn('Basic', 'Basic::basic', $q, 7);
 
 	my $in = $r->finished_fh;
 	ok(!$r->is_finished, 'is not finished');
@@ -46,8 +46,8 @@ subtest 'Fourth', sub {
 };
 
 subtest 'Fifth', sub {
-	my $q = Thread::Csp::Channel->new;
-	my $r = Thread::Csp->spawn('Basic', 'Basic::closed', $q);
+	my $q = Thread::CSP::Channel->new;
+	my $r = Thread::CSP->spawn('Basic', 'Basic::closed', $q);
 
 	$q->send(6);
 	$q->send(7);
@@ -59,8 +59,8 @@ subtest 'Thread', sub {
 	use threads::shared;
 
 	my @value :shared = 42;
-	my $q = Thread::Csp::Channel->new;
-	my $r = Thread::Csp->spawn('Basic', 'Basic::two', \@value);
+	my $q = Thread::CSP::Channel->new;
+	my $r = Thread::CSP->spawn('Basic', 'Basic::two', \@value);
 	is($r->get, 12);
 	is($value[0], 24);
 };
