@@ -1,6 +1,7 @@
-Revision history for Thread-Csp
+Revision history for Thread-CSP
 
 {{$NEXT}}
+          - Rename Thread::Csp to Thread::CSP
 
 0.009     2022-08-23 12:43:58+02:00 Europe/Amsterdam
           - Allow for passing of threads::shared values
